# Mapper

./: .gitignore  .pre-commit-config.yaml  ALL_REMAINING_ITEMS_COMPLETE.md  CODE_STYLE.md  CODE_VS_DOCUMENTATION_GAP.md  COMPLETED_ITEMS_FINAL.md  COMPLETED_ITEMS_SUMMARY.md  FEATURES.md  FEATURES_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  IMPROVEMENTS_IMPLEMENTATION_STATUS.md  IMPROVEMENTS_PRIORITY_LIST.md  IMPROVEMENT_IDEAS.md  MISSING_FUNCTIONALITY.md  REMAINING_ITEMS_COMPLETED.md  SECTION_10_COMPLETE.md  UI_UX_IMPLEMENTATION_STATUS.md  analyze.py  anonymizer.py  diagnosis_loader.py  file_handler.py  layout_loader.py  main.py  mapping_engine.py  pyproject.toml  pytest.ini  requirements.txt  transformer.py  upload_handlers.py  user_preferences.json  utils.py  validation_engine.py
.streamlit/: config.toml
app/: advanced_features.py  anonymizer.py  audit_logger.py  base_classes.py  batch_processor.py  batch_scheduler.py  cache_manager.py  cache_utils.py  chart_utils.py  collaboration.py  config.py  config_loader.py  data_quality.py  data_quality_config.py  data_transformation_advanced.py  decorators.py  dependency_injection.py  error_context.py  error_handling.py  factory_pattern.py  file_handler.py  file_strategies.py  improvements_utils.py  layout_loader.py  main.py  main.py.backup  mapping_enhancements.py  mapping_management.py  mapping_ui.py  notification_center.py  output_generator.py  path_utils.py  performance_utils.py  persistent_storage.py  requirements.txt  security_utils.py  session_state.py  state_manager.py  tab_router.py  testing_qa.py  (+13 more)
app/batch/: batch_processor.py  batch_scheduler.py
app/core/: base_classes.py  config_loader.py  domain_config.py  error_context.py  error_handling.py  event_examples.py  event_system.py  exceptions.py  factory_pattern.py  models.py  protocols.py  session_state.py  state_manager.py  ui_labels.py  view_models.py
app/data/: anonymizer.py  dask_integration.py  data_quality.py  data_quality_config.py  diagnosis_loader.py  file_detection.py  file_handler.py  layout_loader.py  lazy_evaluation.py  onboarding_scripts.py  output_generator.py  preprocessing_tracker.py  quality_reports.py  quality_trends.py  test_data_generator.py  transformation_pipeline.py  transformer.py  upload_handlers.py
app/file/: file_chunker.py  file_detection.py  file_processing.py  file_recovery.py  file_strategies.py  streaming_parser.py  upload_handlers.py
app/mapping/: llm_client.py  (+6 more)
data/: Client onboarding steps.docx  ClientOnbarding Validations.html  ClientOnbarding Validations.ipynb  Diagnosis_lookup.xlsx  PlanSponsorClaims_LibertyCocaCola_Aetna_Aetna_20251208.sql  PlanSponsorClaims_NorthsideHospital_Ameriben_Ameriben_20251208.sql  Test Data Generator.ipynb  cdm_mapping.xlsx  internal_layout.xlsx  ~$ient onboarding steps.docx
streamlit_components/: INTEGRATION_EXAMPLE.md  README.md  SETUP.md
templates/: mapping_template_20251212_000414.json  mapping_template_20251212_000418.json
tests/: conftest.py  test_example.py
(+65 files in other folders)
