[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "claims-mapper-app"
version = "0.1.0"
description = "A Streamlit application for claims mapping and validation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
python = "^3.9"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.30.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
openpyxl = "^3.1.2"
plotly = "^5.18.0"
altair = "^5.2.0"
scikit-learn = {version = "^1.3.2", optional = true}
faker = "^21.0.0"
psutil = "^5.9.8"
python-magic = "^0.4.27"
pyarrow = "^15.0.0"
fastparquet = "^2023.10.1"
jsonschema = "^4.21.1"
typing-extensions = "^4.9.0"
watchdog = "^3.0.0"
toml = "^0.10.2"
chardet = "^5.2.0"
aiofiles = {version = "^23.2.1", optional = true}
cryptography = {version = "^41.0.7", optional = true}
dask = {version = "^2023.12.1", optional = true}

[tool.poetry.extras]
ml = ["scikit-learn"]
async = ["aiofiles"]
security = ["cryptography"]
large-files = ["dask"]

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"
isort = "^5.12.0"
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pre-commit = "^3.6.0"
pylint = "^3.0.3"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | node_modules
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports allowed in __init__.py

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/node_modules/*", "*/venv/*", "*/.venv/*"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "import-outside-toplevel",
    "no-member",
    "unsubscriptable-object",
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "pandas.*",
    "plotly.*",
    "altair.*",
]
ignore_missing_imports = true

